header, title and body tag in index html

--- a/MissionToMars/mission_to_mars.ipynb
+++ b/MissionToMars/mission_to_mars.ipynb
@@ -770,6 +770,43 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hemisphere_image_urls = [\n",
+    "    {\"title\": \"Valles Marineris Hemisphere\", \"img_url\": \"...\"},\n",
+    "    {\"title\": \"Cerberus Hemisphere\", \"img_url\": \"...\"},\n",
+    "    {\"title\": \"Schiaparelli Hemisphere\", \"img_url\": \"...\"},\n",
+    "    {\"title\": \"Syrtis Major Hemisphere\", \"img_url\": \"...\"},\n",
+    "]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'title': 'Valles Marineris Hemisphere', 'img_url': '...'},\n",
+       " {'title': 'Cerberus Hemisphere', 'img_url': '...'},\n",
+       " {'title': 'Schiaparelli Hemisphere', 'img_url': '...'},\n",
+       " {'title': 'Syrtis Major Hemisphere', 'img_url': '...'}]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hemisphere_image_urls"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
